--- a/YWWACP/YWWACP/Resources/layout/Main.axml
+++ b/YWWACP/YWWACP/Resources/layout/Main.axml
@@ -23,4 +23,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Recipes" />
+  <Button
+    android:id="@+id/btnCommunity"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/Community" />
 </LinearLayout>
