community started running. Still missing a lot of features, but it is a start

--- a/YWWACP/YWWACP/Resources/layout/Diary.axml
+++ b/YWWACP/YWWACP/Resources/layout/Diary.axml
@@ -13,18 +13,16 @@
         android:id="@+id/dayPicker"
         android:background="@android:color/holo_blue_light">
         <Button
-            android:text=""
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnYesterday"
             android:drawableStart="@drawable/arrow_left" />
         <Button
-            android:text="Today"
+            android:text="@string/Today"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnToday" />
         <Button
-            android:text=""
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnTomorrow"
