--- a/YWWACP/YWWACP/Resources/layout/Community.axml
+++ b/YWWACP/YWWACP/Resources/layout/Community.axml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <Button
-        android:text="@string/New_Thread"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="15"
-        android:id="@+id/btnNewThread" />
-    <Button
-        android:text="@string/My_Threads"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="15"
-        android:id="@+id/btnMyThreads" />
+        android:id="@+id/linearLayoutWrapTopButtons">
+        <Button
+            android:text="@string/New_Thread"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="15"
+            android:id="@+id/btnNewThread" />
+        <Button
+            android:text="@string/My_Threads"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="15"
+            android:id="@+id/btnMyThreads" />
+    </LinearLayout>
 </LinearLayout>
