--- a/YWWACP/YWWACP/Resources/layout/Dialog_New_Thread.axml
+++ b/YWWACP/YWWACP/Resources/layout/Dialog_New_Thread.axml
@@ -13,6 +13,16 @@
         android:textStyle="bold"
         android:textSize="30dip"
         android:textColor="@android:color/white" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:text="@string/category_prompt" />
+    <Spinner
+        android:id="@+id/spinnerCategories"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:prompt="@string/category_prompt" />
     <EditText
         android:inputType="textMultiLine"
         android:layout_width="match_parent"
