--- a/YWWACP/YWWACP/Resources/layout/Community.axml
+++ b/YWWACP/YWWACP/Resources/layout/Community.axml
@@ -2,23 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="100">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayoutWrapTopButtons">
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:id="@+id/linearLayoutWrapTopButtons"
+        android:weightSum="100">
         <Button
             android:text="@string/New_Thread"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="15"
+            android:layout_weight="50"
             android:id="@+id/btnNewThread" />
         <Button
             android:text="@string/My_Threads"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="15"
+            android:layout_weight="50"
             android:id="@+id/btnMyThreads" />
     </LinearLayout>
+  
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="90"
+        android:id="@+id/listViewCommunity">
+      
+   </ListView>
 </LinearLayout>
