--- a/YWWACP/YWWACP/Resources/layout/Dialog_New_Thread.axml
+++ b/YWWACP/YWWACP/Resources/layout/Dialog_New_Thread.axml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:minHeight="550dip"
-    android:minWidth="500dip">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="100">
     <EditText
         android:inputType="textMultiLine"
         android:layout_width="match_parent"
@@ -17,39 +16,40 @@
         android:gravity="bottom|left"
         android:textColor="@android:color/white" />
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
         android:text="@string/category_prompt" />
     <Spinner
         android:id="@+id/spinnerCategories"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
         android:prompt="@string/category_prompt" />
     <EditText
         android:inputType="textMultiLine"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="50"
+        android:layout_weight="70"
         android:hint="Start your question here"
         android:id="@+id/editTxtQuestion"
-        android:minHeight="150dp"
-        android:maxWidth="100dp"
         android:gravity="top|left" />
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_weight="20"
+        android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:weightSum="100">
         <Button
             android:text="@string/cancelThread"
             android:layout_width="0dp"
-            android:layout_weight="5"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:id="@+id/btnCancelThread" />
         <Button
             android:text="@string/submitThread"
             android:layout_width="0dp"
-            android:layout_weight="5"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:id="@+id/btnSubmitThread" />
     </LinearLayout>
