--- a/YWWACP/YWWACP/Resources/layout/recipeDialogView.axml
+++ b/YWWACP/YWWACP/Resources/layout/recipeDialogView.axml
@@ -4,16 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="100">
-    <ImageView
-        android:src="@android:drawable/ic_menu_gallery"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_weight="80"
+        android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recepieImage" />
-    <TextView
-        android:text="Lorem iposum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recepieText" />
+        android:weightSum="100">
+        <ImageView
+            android:src="@android:drawable/ic_menu_gallery"
+            android:layout_width="0dp"
+            android:layout_weight="50"
+            android:layout_height="wrap_content"
+            android:id="@+id/recepieImage" />
+        <TextView
+            android:text="Lorem iposum"
+            android:layout_width="0dp"
+            android:layout_weight="50"
+            android:layout_height="wrap_content"
+            android:id="@+id/recepieText" />
+    </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_weight="20"
