--- a/YWWACP/YWWACP/Resources/layout/Dialog_New_Thread.axml
+++ b/YWWACP/YWWACP/Resources/layout/Dialog_New_Thread.axml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +15,7 @@
         android:textStyle="bold"
         android:textSize="25dip"
         android:gravity="bottom|left"
+        local:MvxBind="Text Title"
         android:textColor="@android:color/white" />
     <TextView
         android:layout_width="match_parent"
@@ -25,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
+        local:MvxBind="Text Category; SelectedItem SelectedCategoryCommand"
         android:prompt="@string/category_prompt" />
     <EditText
         android:inputType="textMultiLine"
@@ -33,6 +36,7 @@
         android:layout_weight="70"
         android:hint="Start your question here"
         android:id="@+id/editTxtQuestion"
+        local:MvxBind="Text Content"
         android:gravity="top|left" />
     <LinearLayout
         android:orientation="horizontal"
@@ -45,12 +49,14 @@
             android:layout_width="0dp"
             android:layout_weight="50"
             android:layout_height="wrap_content"
-            android:id="@+id/btnCancelThread" />
+            android:id="@+id/btnCancelThread" 
+            local:MvxBind="Click CancelCommand"/>
         <Button
             android:text="@string/submitThread"
             android:layout_width="0dp"
             android:layout_weight="50"
             android:layout_height="wrap_content"
-            android:id="@+id/btnSubmitThread" />
+            android:id="@+id/btnSubmitThread"
+            local:MvxBind="Click SubmitCommand" />
     </LinearLayout>
 </LinearLayout>
