--- a/YWWACP/YWWACP/Resources/layout/Community.axml
+++ b/YWWACP/YWWACP/Resources/layout/Community.axml
@@ -24,12 +24,9 @@
             android:layout_weight="50"
             android:id="@+id/btnMyThreads" />
     </LinearLayout>
-  
     <ListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="90"
-        android:id="@+id/listViewCommunity">
-      
-   </ListView>
+        android:id="@+id/listViewCommunity" />
 </LinearLayout>
