--- a/YWWACP/YWWACP/Resources/layout/FirstView.axml
+++ b/YWWACP/YWWACP/Resources/layout/FirstView.axml
@@ -2,16 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="40dp"
-        local:MvxBind="Text Hello" />
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="40dp"
-        local:MvxBind="Text Hello" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+  <Button
+      android:id="@+id/btnDiary"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/Diary" />
+  <Button
+      android:id="@+id/btnHealthPlan"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/Health_Plan" />
+  <Button
+      android:id="@+id/btnProfile"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/Profile" />
+  <Button
+      android:id="@+id/btnRecipes"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/Recipes" />
+  <Button
+      android:id="@+id/btnCommunity"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/Community" />
 </LinearLayout>
