--- a/YWWACP/YWWACP/Resources/layout/FirstView.axml
+++ b/YWWACP/YWWACP/Resources/layout/FirstView.axml
@@ -1,32 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-aut"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+  <!-- <android.support.v7.widget.Toolbar
+
+    android:id="@id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:minHeight="?attr/actionBarSize"
+    android:backround="?attr/colorPrimary"
+    app:theme="@style/ThemeOverlay.AppCompat.Dark.Actionbar"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
+  
+  
+  -->
+  
+    <Button
+        android:id="@+id/btnDiary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Diary" />
+    <Button
+        android:id="@+id/btnHealthPlan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Health_Plan" />
+    <Button
+        android:id="@+id/btnProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Profile" />
+    <Button
+        android:id="@+id/btnRecipes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Recipes" />
+    <Button
+        android:id="@+id/btnCommunity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Community" />
+
   <Button
-      android:id="@+id/btnDiary"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/Diary" />
-  <Button
-      android:id="@+id/btnHealthPlan"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/Health_Plan" />
-  <Button
-      android:id="@+id/btnProfile"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/Profile" />
-  <Button
-      android:id="@+id/btnRecipes"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/Recipes" />
-  <Button
-      android:id="@+id/btnCommunity"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/Community" />
+    android:id="@+id/btnExercise"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/Exercises" />
 </LinearLayout>
