changes to thread design

--- a/YWWACP/YWWACP/Resources/layout/Dialog_New_Thread.axml
+++ b/YWWACP/YWWACP/Resources/layout/Dialog_New_Thread.axml
@@ -13,8 +13,7 @@
         android:id="@+id/editTxtTitle"
         android:textStyle="bold"
         android:textSize="25dip"
-        android:gravity="bottom|left"
-        android:textColor="@android:color/white" />
+        android:gravity="bottom|left" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
