--- a/YWWACP/YWWACP/Resources/layout/ListView_Row.axml
+++ b/YWWACP/YWWACP/Resources/layout/ListView_Row.axml
@@ -14,6 +14,7 @@
         android:layout_weight="20"
         android:weightSum="100">
         <TextView
+            style="@+style/textViewTheme"
             android:text="Title"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -24,6 +25,7 @@
             android:paddingLeft="5dp"
             android:paddingTop="2dp" />
         <TextView
+            style="@+style/textViewTheme"
             android:text="Category"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -31,6 +33,7 @@
             android:id="@+id/txtViewCategory" />
     </LinearLayout>
     <TextView
+        style="@+style/textViewTheme"
         android:text="Content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
