can navigate, but else no functionalities

--- a/YWWACP/YWWACP/Resources/layout/CommunityListViewRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/CommunityListViewRow.axml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,14 +24,18 @@
             android:textStyle="bold"
             android:textSize="25dip"
             android:paddingLeft="5dp"
-            android:paddingTop="2dp" />
+            android:paddingTop="2dp" 
+            local:MvxBind="Text Title"
+            />
         <TextView
             style="@+style/textViewTheme"
             android:text="Category"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="50"
-            android:id="@+id/txtViewCategory" />
+            android:id="@+id/txtViewCategory" 
+            local:MvxBind="Text Category"
+            />
     </LinearLayout>
     <TextView
         style="@+style/textViewTheme"
@@ -40,5 +45,7 @@
         android:layout_weight="80"
         android:id="@+id/txtViewContent"
         android:paddingTop="10dp"
-        android:paddingLeft="15dp" />
+        android:paddingLeft="15dp" 
+        local:MvxBind="Text Content"
+        />
 </LinearLayout>
