--- a/YWWACP/YWWACP/Resources/layout/Community.axml
+++ b/YWWACP/YWWACP/Resources/layout/Community.axml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
+              
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,17 +18,24 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="50"
-            android:id="@+id/btnNewThread" />
-        <Button
+            android:id="@+id/btnNewThread"
+            local:MvxBind="Click AddNewThreadCommand"
+            />
+      <Button
             android:text="@string/My_Threads"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="50"
-            android:id="@+id/btnMyThreads" />
+            android:id="@+id/btnMyThreads" 
+            local:MvxBind="Click MyThreadsCommand"
+                        />
     </LinearLayout>
-    <ListView
+    <Mvx.MvxListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="90"
-        android:id="@+id/listViewCommunity" />
+        android:id="@+id/listViewCommunity"
+        local:MvxItemTemplate="@layout/communitylistviewrow"
+        local:MvxBind="ItemsSource NewThreads; ItemClick SelectedThreadCommand"/>
+
 </LinearLayout>
