--- a/YWWACP/YWWACP/Resources/layout/FirstView.axml
+++ b/YWWACP/YWWACP/Resources/layout/FirstView.axml
@@ -15,8 +15,7 @@
     android:backround="?attr/colorPrimary"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.Actionbar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
-  
-  
+ 
   -->
   
     <Button
@@ -40,11 +39,12 @@
         android:layout_height="wrap_content"
         android:text="@string/Recipes" />
     <Button
-        android:id="@+id/btnCommunity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/Community" />
-
+      android:id="@+id/btnCommunity"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/Community"
+      local:MvxBind="Click OpenCommand" />
+        
   <Button
     android:id="@+id/btnExercise"
     android:layout_width="match_parent"
