--- a/YWWACP/YWWACP/Resources/layout/ExerciseMain.axml
+++ b/YWWACP/YWWACP/Resources/layout/ExerciseMain.axml
@@ -1,11 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/grid"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:columnWidth="100dp"
-    android:numColumns="auto_fit"
-    android:verticalSpacing="50dp"
-    android:horizontalSpacing="50dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center" />
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+   android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="100">
+  <LinearLayout
+         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="10"
+        android:gravity="center"
+        android:paddingBottom="5dp"
+        android:paddingLeft="9dp"
+        android:paddingRight="9dp"
+        android:paddingTop="5dp" >
+
+    <Button
+       android:id="@+id/btnNewExer"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="Test" />
+  </LinearLayout>
+
+
+  <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+
+      android:id="@+id/grid"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:columnWidth="100dp"
+      android:numColumns="auto_fit"
+      android:verticalSpacing="50dp"
+      android:horizontalSpacing="50dp"
+      android:stretchMode="columnWidth"
+      android:gravity="center" />
+
+
+</LinearLayout>
