--- a/YWWACP/YWWACP/Resources/layout/FirstView.axml
+++ b/YWWACP/YWWACP/Resources/layout/FirstView.axml
@@ -29,9 +29,8 @@
         android:id="@+id/btnProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Profile" 
+        android:text="@string/Profile"
         local:MvxBind="Click OpenProfileCommand" />
-        
     <Button
         android:id="@+id/btnRecipes"
         android:layout_width="match_parent"
@@ -53,6 +52,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Graph" />
+      <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DELETE ENTIRE DATABASE" 
+        local:MvxBind="Click DeleteEverythingCommand" />
+  
 <!--oxyplot start-->
     <LinearLayout
         android:orientation="vertical"
