Community working, no loops, and drop down for categorise are working again

--- a/YWWACP/YWWACP/Resources/layout/CommunityListViewRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/CommunityListViewRow.axml
@@ -33,7 +33,7 @@
             android:layout_height="match_parent"
             android:layout_weight="50"
             android:id="@+id/txtViewCategory"
-            local:MvxBind="Category" />
+            local:MvxBind="Text Category" />
     </LinearLayout>
     <TextView
         style="@+style/textViewTheme"
